# VRM2MDL

./: CMakeLists.txt  FocalXZ.txt  README.md  build.bat  build_appimage.sh  check.bat  main.cpp  vrm2mdl.desktop
.github/workflows/: build.yml  release.yml
assimp_core/: main.cpp
include/: vrm2mdl.h
vrm_gui/: Cargo.toml  build.rs
vrm_gui/src/: main.rs
