[package]
name = "vrm_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.1"
rfd = "0.17.2"
libloading = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem"] }
sysinfo = "0.30"

[build-dependencies]
winres = "0.1"
